(executable
 (name printmod)
 (modules printmod)
 (libraries unix threads)
 (link_deps ../target/debug/librusty.a allocpair.o)
 (link_flags -thread -ccopt -pthread target/debug/librusty.a caml/allocpair.o))

(rule
 (targets rusty.ml)
 (deps (:gen printmod.exe))
 (action (with-stdout-to %{targets} (run %{gen}))))

(rule
 (targets allocpair.o)
 (deps (:source allocpair.c))
 (action (run %{ocamlopt} -thread -ccopt -pthread %{source} -o %{targets})))

(library
 (name rusty)
 (modules rusty)
 (libraries unix threads bigstring)
 (c_library_flags -lpthread target/debug/librusty.a caml/allocpair.o))
