(executable
 (name printmod)
 (modules printmod)
 (libraries unix threads)
 (link_deps allocpair.o ../example/target/debug/libexternals.a)
 (link_flags -thread -ccopt -pthread util/allocpair.o example/target/debug/libexternals.a))

(rule
 (targets allocpair.o)
 (deps (:source allocpair.c))
 (action (run %{ocamlopt} -thread -ccopt -pthread %{source} -o %{targets})))
