(rule
 (targets externals.ml)
 (deps (:gen ../../util/printmod.exe))
 (action (with-stdout-to %{targets} (run %{gen}))))

(library
 (name externals)
 (modules externals)
 (libraries unix threads bigstring)
 (c_library_flags -lpthread util/allocpair.o example/target/debug/libexternals.a))

(executable
 (public_name main)
 (modules main)
 (libraries externals))
